<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp" >

    <TextView
        android:id="@+id/txt_employee_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/first_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_employee_name"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/address"
        android:textAppearance="?android:attr/textAppearance"
        android:textColor="@android:color/darker_gray" />

    <TextView
        android:id="@+id/txt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_address"
        android:layout_marginTop="4dp"
        android:autoLink="web"
        android:linksClickable="false"
        android:text="@string/email"
        android:textColor="@android:color/darker_gray" />

    <TextView
        android:id="@+id/txt_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_email"
        android:layout_marginTop="4dp"
        android:autoLink="phone"
        android:linksClickable="false"
        android:text="@string/phone_number"
        android:textColor="@android:color/darker_gray" />
    
    <TextView
        android:id="@+id/txt_company_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_phone_number"
        android:layout_marginTop="4dp"
        android:text="@string/company_name"
        android:textColor="@android:color/darker_gray" />

    <TextView
        android:id="@+id/txt_salary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txt_address"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/salary"
        android:textColor="@android:color/black" />

</RelativeLayout>